assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Outfit:wght@100..900&display=swap');

/* CSS variables */
:root {
    --primary-font: "Outfit", sans-serif;
    --secondary-font: "Quicksand", sans-serif;

    /* colors generated by colormind, using hero image */
    --primary-color: #d5c4b6;
    /* light biege */
    --secondary-color: #9a8472;
    /* biege */
    --highlight-color: #9095ab;
    /* blue */
    --light-highlight-color: #a6b2c3;
    /* light blue */
    --black-color: #343635;
    /* black */
}

/* Global styles */
body {
    margin: 0;
    font-family: var(--secondary-font);
}

h1, h2 {
    font-family: var(--primary-font);
}

h2 {
    margin-bottom: 1rem;
}

.section {
    margin-top: 2rem;
    margin-bottom: 2rem;
}

/* Hero */
#hero {
    /* fill device window, need fixed navbar height to get accurate number */
    height: 95vh;
    width: 100vw;
    /* image url, don't repeat, center horizontally and vertically, and automatically size/crop itself to fit the whole hero section */
    background: url("../images/hero-image.webp") no-repeat center center/cover;
    position: relative;
}

/* Intro */
#intro {
    padding: 0px;
}

/* Links */
#links .card {
    margin-bottom: 2rem;
}

/* #intro img {
    display: block;

}  */

/* #cover-text { */
    /* Last rgba value here sets the opacity, so it is translucent */
    /* background-color: rgba(241, 109, 107, .7);
    font-size: 130%;
    position: absolute;
    bottom: 30px;
    width: 80%;
    min-height: 200px;
    padding-top: 40px;
    padding-left: 10px;
} */

/* Footer - AI generated */
footer {
    background-color: var(--primary-color);
    color: var(--secondary-color);
    padding-bottom: 3rem;
    text-align: center;
    bottom: 0;
    width: 100%;
}

